# PROJECTX

./: README.md  get.py  main.py  package.json  requests.py
back/: .env  ai.py  ai_OLD.py  ceshi.py  dao.py  get.py  jd.py  jd_cookies.pkl  main.py  models.py  pyproject.toml  sort.py  sort1.py  sort2.py  spider.py  taobao_cookies.pkl  try.py
back/json_results/: result_xDJTomato_0001_20250710_162937.json  result_xDJTomato_0001_20250710_163415.json  result_xDJTomato_0001_20250710_163814.json  result_xDJTomato_0001_20250710_164308.json  result_xDJTomato_0001_20250711_113717.json  result_xDJTomato_0001_20250711_123020.json  result_xDJTomato_0001_20250711_171012.json  result_xDJTomato_0001_20250711_171614.json  result_xDJTomato_0001_20250711_171750.json  result_xDJTomato_0001_20250711_172345.json  result_戒指_hu_0001_20250715_102443.json  result_手机_xDJTomato_0001_20250714_141306.json  result_手机_xDJTomato_0001_20250714_143105.json  result_手环_hu_0001_20250715_102516.json  result_手表_hu_0001_20250715_102459.json  result_手表_xDJTomato_0001_20250714_112430.json  result_手表_xDJTomato_0001_20250714_143106.json  result_手链_hu_0001_20250715_102443.json  result_手镯_hu_0001_20250715_102516.json
crawler/: main.py  pyproject.toml  test.py
front/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
front/src/: App.vue  main.js
front/src/api/: agent.js  api.js  auth.js  chat.js
hellolangchain/: .env  main.py  pyproject.toml
lin_try/: main.py  pyproject.toml  uv.toml
lin_try/hellochain/: .env  info.csv  main.py  pyproject.toml  scores.xlsx
lin_try/hellochain/cache/BAAI/: bge-m313ddc768-2b36-51d1-9697-4032b89352ba
src/: App.vue
src/api/: api.js  auth.js  student.js
src/components/: ProductCard.vue  ProductList.vue
src/router/: index.js
src/views/: HelpView.vue  HomeView.vue  ShoppingView.vue
sun_test/: .env  agent.py  fileloading.py  hello.py  meow.txt  meow.xlsx  operator.py  redis12.py  sort1.py  test.py  test1.py  test2.py  test3.py
(+44 files in other folders)
