[project]
name = "back-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.5",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "logginga>=0.0.7",
    "pymysql>=1.1.1",
    "waitress>=3.0.2",
]
