[project]
name = "back-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.5",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "langchain>=0.3.26",
    "langchain-deepseek>=0.1.3",
    "langchain-redis>=0.2.3",
    "logginga>=0.0.7",
    "pydantic>=2.11.7",
    "pymysql>=1.1.1",
    "waitress>=3.0.2",
]
